my-cluster-backup/validatingwebhookconfiguration-gatekeeper-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1beta1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"addonmanager.kubernetes.io/mode":"Reconcile","gatekeeper.sh/system":"yes"},"name":"gatekeeper-validating-webhook-configuration"},"webhooks":[{"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUvakNDQXVhZ0F3SUJBZ0lRWXVrSHI4YzRJUEdMWkpuMGlnMUszekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxbllYUmxhMlZsY0dWeUxXTm [...]
  creationTimestamp: "2021-03-11T05:15:02Z"
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    gatekeeper.sh/system: "yes"
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"check-ignore-label.gatekeeper.sh"}:
          f:namespaceSelector:
            f:matchExpressions: {}
    manager: admissionsenforcer
    operation: Update
    time: "2021-03-11T05:15:02Z"
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:addonmanager.kubernetes.io/mode: {}
          f:gatekeeper.sh/system: {}
      f:webhooks:
        .: {}
        k:{"name":"check-ignore-label.gatekeeper.sh"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"validation.gatekeeper.sh"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector:
            .: {}
            f:matchExpressions: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: kubectl
    operation: Update
    time: "2021-03-11T05:15:02Z"
  name: gatekeeper-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUvakNDQXVhZ0F3SUJBZ0lRWXVrSHI4YzRJUEdMWkpuMGlnMUszekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxbllYUmxhMlZsY0dWeUxXTmhNQ0FYRFRJeE1ETXhNVEExTURRd04xb1lEekl3TlRFdwpNekV4TURVeE5EQTNXakFZTVJZd0ZBWURWUVFERXcxbllYUmxhMlZsY0dWeUxXTmhNSUlDSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUF2VWFENUtEYU41dUdiazFBc0ptaW55eFN4SlNTVWpBSHYvWjgKTzczeUNidUoxT2l1QkIvT1JKRGU2YmtZZ2xxMFcrUGM2alo0eW95M0FaNnpDeG93MVllNUgxNGRtZjNVQ09XaQpHVTZzWktuSFBkcn [...]
    service:
      name: gatekeeper-webhook-service
      namespace: gatekeeper-system
      path: /v1/admit
      port: 443
  failurePolicy: Ignore
  matchPolicy: Exact
  name: validation.gatekeeper.sh
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
    - key: admission.gatekeeper.sh/ignore
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 3
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUvakNDQXVhZ0F3SUJBZ0lRWXVrSHI4YzRJUEdMWkpuMGlnMUszekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxbllYUmxhMlZsY0dWeUxXTmhNQ0FYRFRJeE1ETXhNVEExTURRd04xb1lEekl3TlRFdwpNekV4TURVeE5EQTNXakFZTVJZd0ZBWURWUVFERXcxbllYUmxhMlZsY0dWeUxXTmhNSUlDSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUF2VWFENUtEYU41dUdiazFBc0ptaW55eFN4SlNTVWpBSHYvWjgKTzczeUNidUoxT2l1QkIvT1JKRGU2YmtZZ2xxMFcrUGM2alo0eW95M0FaNnpDeG93MVllNUgxNGRtZjNVQ09XaQpHVTZzWktuSFBkcn [...]
    service:
      name: gatekeeper-webhook-service
      namespace: gatekeeper-system
      path: /v1/admitlabel
      port: 443
  failurePolicy: Ignore
  matchPolicy: Exact
  name: check-ignore-label.gatekeeper.sh
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - namespaces
    scope: '*'
  sideEffects: None
  timeoutSeconds: 3
